account_bank_statement_import_csv: support COOP bank format

--- a/account_bank_statement_import_csv/views/account_bank_statement_import_csv_format.xml
+++ b/account_bank_statement_import_csv/views/account_bank_statement_import_csv_format.xml
@@ -45,6 +45,7 @@
                   <field name="tx_type_turnover"/>
                 </group>
                 <group string="Other Config" colspan="4">
+                  <field name="delimiter"/>
                   <field name="date_format"/>
                   <field name="match_condition"/>
                   <field name="skip_condition"/>
