account_bank_statement_import_csv: import original currency + amount currency

--- a/account_bank_statement_import_csv/views/account_bank_statement_import_csv_format.xml
+++ b/account_bank_statement_import_csv/views/account_bank_statement_import_csv_format.xml
@@ -45,6 +45,8 @@
                   <field name="tx_type_turnover"/>
                   <field name="payer"/>
                   <field name="payer_account_number"/>
+                  <field name="currency"/>
+                  <field name="amount_currency"/>
                 </group>
                 <group string="Other Config">
                   <field name="delimiter"/>
