account_bank_statement_import_csv: parse stmt currency from another file
if another file doesn't have a currency (currency idx not specified),
gracefully degrade to standard currency loading.

--- a/account_bank_statement_import_csv/views/account_bank_statement_import_csv_format.xml
+++ b/account_bank_statement_import_csv/views/account_bank_statement_import_csv_format.xml
@@ -59,6 +59,7 @@
                   <field name="balance_date_idx" attrs="{'required': [('balance_file','!=',False)], 'invisible': [('balance_file','=',False)]}"/>
                   <field name="balance_start_idx" attrs="{'required': [('balance_file','!=',False)], 'invisible': [('balance_file','=',False)]}"/>
                   <field name="balance_end_idx" attrs="{'required': [('balance_file','!=',False)], 'invisible': [('balance_file','=',False)]}"/>
+                  <field name="balance_currency_code_idx" attrs="{'invisible': [('balance_file','=',False)]}"/>
                 </group>
               </group>
               <group colspan="1" string="Header">
